[gd_scene load_steps=6 format=3 uid="uid://cq50r5ufbo24a"]

[ext_resource type="PackedScene" uid="uid://j8pjxck2ut1e" path="res://entity.tscn" id="1_fnb7r"]
[ext_resource type="Script" path="res://enemy.gd" id="2_ehfx1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sr2hn"]
size = Vector2(20, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26g7t"]
size = Vector2(72, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdwcv"]
size = Vector2(40, 20)

[node name="Enemy" instance=ExtResource("1_fnb7r")]
script = ExtResource("2_ehfx1")

[node name="Hitbox" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("RectangleShape2D_sr2hn")

[node name="Detector" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector" index="0"]
shape = SubResource("RectangleShape2D_26g7t")

[node name="Attack" type="Area2D" parent="." index="4" groups=["Enemy"]]
collision_layer = 4
collision_mask = 0
input_pickable = false
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack" index="0"]
shape = SubResource("RectangleShape2D_kdwcv")
disabled = true

[node name="ColorRect" type="ColorRect" parent="Attack/CollisionShape2D" index="0"]
visible = false
offset_left = -20.5
offset_top = -10.0
offset_right = 19.5
offset_bottom = 10.0
color = Color(1, 1, 1, 0.454902)

[node name="AtttackTime" type="Timer" parent="." index="5"]

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="Detector" to="." method="_on_detector_area_entered"]
[connection signal="area_exited" from="Detector" to="." method="_on_detector_area_exited"]
[connection signal="area_entered" from="Attack" to="." method="_on_attack_area_entered"]
[connection signal="timeout" from="AtttackTime" to="." method="_on_atttack_time_timeout"]
